# CPSC-538G---FreeRTOS-Projects

./: .clang-format  .gitignore  CMakeLists.txt  project-description.md  pyproject.toml
RTSIM/cpp/: cbs_1.cpp  cbs_10.cpp  cbs_11.cpp  cbs_12.cpp  cbs_13.cpp  cbs_14.cpp  cbs_15.cpp  cbs_16.cpp  cbs_17.cpp  cbs_18.cpp  cbs_4.cpp  cbs_5.cpp  cbs_6.cpp  cbs_7.cpp  cbs_8.cpp  cbs_9.cpp
RTSIM/python/: plot_trace.py
Standard/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_include.h  ProjectConfig.h  admission_control.c  admission_control.h  cbs.c  cbs.h  edf_scheduler.c  edf_scheduler.h  fixed_priority_support.c  fixed_priority_support.h  helpers.c  helpers.h  main.c  main.h  main_blinky.c  main_blinky.h  scheduler_internal.h  smp_global.c  smp_global.h  smp_partitioned.c  smp_partitioned.h  smp_shared.c  smp_shared.h  srp.c  srp.h  tracer.c  tracer.h
Standard/config/: TestConfig.h  test_profiles_cbs.h  test_profiles_edf.h  test_profiles_global_mp.h  test_profiles_mp.h  test_profiles_partitioned_mp.h  test_profiles_srp.h
Standard/data_structures/: queue.c  queue.h
Standard/testing/: cbs_tests.c  cbs_tests.h  edf_tests.c  edf_tests.h  global_mp_tests.c  global_mp_tests.h  partitioned_mp_tests.c  partitioned_mp_tests.h  smp_tests.c  smp_tests.h  spec.h  srp_tests.c  srp_tests.h  test_runner.c  test_runner.h  testing.c  testing.h  tests.c  tests.h
Standard/types/: scheduler_types.h
_python-tracer/: serial_monitor.py  test-runner.py
_python_tracer/: expected_events_from_log.py  pico_env.py  serial_monitor.py  serial_monitor_smp.py  test_data.py  test_runner.py
_verifiers/: tests_verifier.py  verify.py  verify_data.py  verify_global.py
(+38 files in other folders)
